style(docs): fix overflow-y in sections

--- a/docs/src/components/api.module.css
+++ b/docs/src/components/api.module.css
@@ -57,7 +57,9 @@ main h2:first-child {
   .section > :not([data-language]) {
     max-width: 100%;
     overflow-x: auto;
+    overflow-y: hidden;
     grid-column: 1/2;
+    padding-bottom: 0.11rem;
   }
 
   .section > [data-language] {
